# ractory

./: .gitignore  README.md  bulk_exceed_request.json  bulk_request.json  docker-compose.yml  er management and workflow endpoints  tatus --short
backend/: Dockerfile  MULTI_TENANT_SECURITY.md  README.md  alembic.ini  db_schema_dev_20250424.json  db_schema_prod_20250424.json  debug_imports.py  fix_deployment.txt  init_py_fixed.py  isolation_test.py  pyproject.toml  requirements-test.txt  requirements.txt  setup_dev_database_working.py  temp_hash_check.py  temp_script.py  test_edge_cases.py  test_email.py  test_import.py  update_timestamps.sql
backend/alembic/: env.py
backend/alembic/versions/: 00120674aa9c_add_updated_at_to_projects.py  1e0c0be8ce63_remove_creation_date_and_check_sum_from_.py  20250428_001_convert_to_guids.py  20250501_001_add_company_index_user_fields_workflow.py  3883c63599b2_add_updated_at_trigger.py  5fe38ef5ec6e_remove_created_date_columns.py  6739ad986e80_allow_null_updated_at.py  87c511a4b679_initial_migration.py  92cb5fead847_add_short_name_logo_path_is_active_to_.py  a4c5f944fed8_merge_guid_conversion_and_updated_at_.py  add_missing_updated_at_columns.py  f346b6488b02_initial_schema_setup.py  f570b9d188e5_fix_updated_at_fields.py  f89e50d73d47_merge_heads.py  (+2 more)
backend/app/: __init__.py  main.py  main.py.backup  main.py.bak_rlsfix  version.py
backend/scripts/: apply_auth_changes.sh  create_admin_user.py  create_test_users.py  document_schema.py  enable_rls.py  generate_hash.py  test_auth.py  test_db.py  update_rls_for_soft_delete.sql
(+213 files in other folders)
