[tool.poetry]
name = "rafactory-api"
version = "0.1.0"
description = "Ra Factory API for multi-tenant factory management"
authors = ["Alex <alex@raworkshop.bg>"]
readme = "README.md"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
pydantic = "^2.5.2"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.8.0"
email-validator = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
flake8 = "^6.1.0"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

dependencies = [
    "fastapi>=0.100.0",
    "sqlalchemy>=2.0.20",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.1",
    "asyncpg>=0.28.0",
    "alembic>=1.11.3",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
] 